# DocGenie

./: README.md  main.py
V_1/: downloads.db  main.py
V_1/gui/: 1.main_window.py  download_table.py  status_label.py  table_utils.py
V_1/modules/: add_url_logic.py  db_manager.py  download_logic.py  extractor.py  file_downloader.py  hls_downloader.py  recorder.py  toolbar_logic.py  utils.py  yt_downloader.py
V_1/my_project/: Cargo.toml
V_2/: column_widths.json  main.py  themes.py
V_2/gui/: main_window.py  menu_bar.py  toolbar.py
V_2/my_project/: Cargo.toml
V_2/my_project/src/: api.rs  auth.rs  cloud_storage.rs  config.rs  download.rs  interruptions.rs  lib.rs  logger.rs  main.rs  progress.rs  rate_limiting.rs  ssl.rs  storage.rs  task_manager.rs
V_3/: logging_config.py  main.py  themes.py
V_3/gui/: download_table.py  main_window.py  menu_bar.py  (+3 more)
gui/: clipboard_monitor.py  dark_theme.py  download_table.py  main_window.py  menu_bar.py  status_label.py  table_utils.py  toolbar.py  url_input.py
modules/: add_url_logic.py  db_manager.py  download_logic.py  downloader.py  extractor.py  file_downloader.py  hls_downloader.py  recorder.py  toolbar_logic.py  utils.py  yt_downloader.py
my_project/: Cargo.toml  Downloads
my_project/migrations/2025-03-08-0001_create_downloads/: down.sql  up.sql
my_project/src/: auth.rs  cloud_storage.rs  config.rs  download.rs  file_format.rs  graphql_schema.rs  interruptions.rs  lib.rs  logger.rs  main.rs  progress.rs  rate_limiting.rs  schem.rs  ssl.rs  storage.rs  task_manager.rs
my_project/src/api/: api.rs  metadata.rs  mod.rs
(+23 files in other folders)
