[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[features]
default = []
with-diesel = ["diesel", "diesel_migrations"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
zip = "0.5"
log = "0.4"
futures = "0.3"
env_logger = "0.10"
async-graphql = "4.0"
async-graphql-actix-web = "4.0"
simplelog = "0.12"
diesel = { version = "2.0.0", features = ["sqlite"], optional = true }
diesel_migrations = { version = "2.0.0", optional = true }
dotenv = "0.15.0"
time = "0.3"
url = "2.2"

[lib]
name = "my_project"
path = "src/lib.rs"

[[bin]]
name = "my_project"
path = "src/main.rs"
